# WarpEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  D3D12Voxels.vcxproj  D3D12Voxels.vcxproj.filters  D3D12WarpEngine.sln  README.md  WarpEngine.sln  WarpEngine.vcxproj  WarpEngine.vcxproj.filters  packages.config  vcpkg.json
assets/Sponza/: Sponza.gltf
assets/asteroid/: Asteroid.gltf
assets/cube/: cube.gltf
assets/wetmud/: Wetmud.gltf
assets/wood/: wood.gltf
shaders/: BRDF.hlsli  Base.hlsl  Basic.hlsl  Cube.hlsl  CubeBad.hlsl  Deferred.hlsl  DirectionalShadowing.hlsl  GbufferView.hlsl  Model.hlsl  OctahedronEncoding.hlsli  Triangle.hlsl
src/: Main.cpp  WinAPI.h  WinCOM.cpp  WinInn.cpp  WinInput.cpp  WinInput.h  WinMain.cpp  WinWrap.cpp  WinWrap.h
src/Assets/: Asset.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  GltfLoader.cpp  GltfLoader.h  Loader.h  MaterialAsset.h  MeshAsset.h  MeshImporter.cpp  MeshImporter.h  ModelAsset.h  ModelLoader.cpp  ModelLoader.h  TextureAsset.h  TextureImporter.cpp  TextureImporter.h
src/Assets/Importers/: AssetImporter.cpp  AssetImporter.h  MeshImporter.cpp  MeshImporter.h  TextureImporter.cpp  TextureImporter.h
src/Assets/Importers/Formats/: GltfMeshImporter.cpp  ImageLoader.cpp  ImageLoader.h
src/Assets/Util/: GltfLoader.cpp  GltfLoader.h  ImageLoader.cpp  ImageLoader.h  MeshLoader.cpp  MeshLoader.h
src/Core/: Application.cpp  Application.h  Assert.h  Defines.h  Input.cpp  Input.h  Logger.cpp  Logger.h
src/Gfx/: Renderer.cpp  Renderer.h  stdafx.h
src/Input/: DeviceManager.cpp  DeviceManager.h  KeyboardDevice.cpp  KeyboardDevice.h  MouseDevice.cpp  MouseDevice.h
src/Math/: Math.h
src/RHI/D3D12/: Device.h
src/Renderer/: FrameGraph.h  Material.h  MaterialRegistry.h  Mesh.h  Meshlet.h  Renderer.cpp  Renderer.h  RendererDebugLayer.cpp  RendererDebugLayer.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  Vertex.h  stdafx.h
src/Renderer/RHI/: CommandAllocatorPool.cpp  CommandAllocatorPool.h  CommandContext.cpp  CommandContext.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  Descriptor.cpp  Descriptor.h  DescriptorHeap.cpp  DescriptorHeap.h  Device.cpp  Device.h  DeviceChild.h  GpuCommandList.cpp  GpuCommandList.h  GpuCommandQueue.cpp  GpuCommandQueue.h  GpuDescriptorHeap.cpp  GpuDescriptorHeap.h  GpuDevice.cpp  GpuDevice.h  GpuDeviceChild.h  GpuPhysicalDevice.cpp  GpuPhysicalDevice.h  GpuPipelineState.cpp  GpuPipelineState.h  GpuResource.cpp  GpuResource.h  GpuSwapchain.cpp  GpuSwapchain.h  GpuValidationLayer.cpp  GpuValidationLayer.h  PIXRuntime.cpp  PIXRuntime.h  PhysicalDevice.cpp  PhysicalDevice.h  PipelineState.cpp  PipelineState.h  (+18 more)
src/Renderer/RenderTaskGraph/: Defines.h  RenderTask.cpp  RenderTask.h  RenderTaskGraph.cpp  RenderTaskGraph.h  ResourceAllocator.h  ResourceCommon.h  ResourceManager.cpp  ResourceManager.h  ResourceMemoryArena.cpp  ResourceMemoryArena.h  TaskAllocator.h
src/Scenes/: Scene.h
src/Util/: ArrayView.h  GltfMeshLoader.cpp  Guid.cpp  Guid.h  ImageLoader.cpp  ImageLoader.h  Logger.cpp  Logger.h  Memory.h  MeshLoader.h  Rc.h  String.cpp  String.h  Timer.h
src/World/: Components.h  Entity.h  EntityCapacitor.cpp  EntityCapacitor.h  EntityGraph.h  EntityRegistry.h  World.cpp  World.h
src/World/Components/: CameraComponent.h  LightComponent.h  MeshComponent.h  NametagComponent.h  ParentComponent.h  TransformComponent.h
src/rc/: RcPtr.h  RefCounted.h
src/rhi/D3D12/: DeviceInstance.h  RHI.h  _Device.cpp  _Device.h
